# log_buffer

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: basic_usage.cpp.ECC66444A7E6DDF9.idx  logger.hpp.9C68DB2CAFED0913.idx  test_logger.cpp.78C71BAB58C1C740.idx
.github/: copilot-instructions.md
examples/: basic_usage.cpp
include/log_buffer/: logger.hpp
src/: logger.cpp
tests/: test_logger.cpp
